--- a/public/main.css
+++ b/public/main.css
@@ -1,46 +1,28 @@
 * {
     box-sizing: border-box;
 }
-.container {
-    width: 80%;
-    margin: 0 auto;
-}
+
 body {
     font-size: 10px;
     font-family: Tahoma, Arial;
 }
 
-nav.menu {
+div.menu {
     width: 100%;
     background-color: #4d5791;
     height: 44px;
     padding: 0 40px;
 }
 
-nav.menu ul,
-nav.menu ul li {
+div.menu ul,
+div.menu ul li {
     margin: 0;
     padding: 0 ;
     list-style: none;
     display: inline-block;
 }
-    .skip-link {
-        background: #6f7dd0;
-        color: #fff;
-        font-weight: 700;
-        left: 50%;
-        padding: 10px;
-        position: absolute;
-        transform: translateY(-100%);
-    }
-    
-    .skip-link:focus {
-        transform: translateY(0%);
-    }
-    .skip-link {
-        transition: transform 0.3s;
-      }
-nav.menu ul li a {
+
+div.menu ul li a {
     display: block;
     padding: 0 20px;
     line-height: 44px;
@@ -50,7 +32,7 @@ nav.menu ul li a {
     margin: 0;
 }
 
-nav.menu ul li a:hover  {
+div.menu ul li a:hover  {
     background-color: white;
     color: #4d5791;
 }
@@ -58,7 +40,7 @@ nav.menu ul li a:hover  {
 div.hero {
     height: 350px;
     background-color: #b4c6f0;
-    background-image: url('./bg.png');
+    background-image: url('bg.png');
     background-size: 400px;
     background-repeat: no-repeat;
     background-position: center bottom;
@@ -75,6 +57,11 @@ div.hero h1 {
     color: #fff;
     font-size: 4.2em;
     margin-bottom: 20px;
+}
+
+div.center-link {
+    display:flex;
+    text-align: center;
 }
 
 div.hero h2 {
@@ -113,27 +100,4 @@ div.hero h2 {
     .container .div.text-box {
         margin: 10px;
     }
-}   
-body {
-    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-    width: 100%;
-    height: 500px;
-    position: relative;
-  }
-  
-  svg {
-      width: 75%;
-      height: 100%;
-  }
-  
-  path.slice{
-      stroke-width:2px;
-  }
-  
-  polyline{
-      opacity: .3;
-      stroke: black;
-      stroke-width: 2px;
-      fill: none;
-  }
-  
+}
